# Oracle-Amigo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Mini_launcher_plan.txt  Oracle_frontend.txt  Oracle_frontend_2.txt  README.md  SPEC.md  components.json  implementation_plan.md  package-lock.json  package.json  playwright.config.mjs  podman-compose.yml  server.ts  skills-lock.json  task.md  tsconfig.json  tsconfig.ui.json  vite.config.ts  vitest.config.ts  vitest.ui.config.ts
.tmp-smoke-JrXgFp/: Smoke deck.pptx
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/binaries/: README.md
apps/desktop-shell/src-tauri/capabilities/: default.json
apps/desktop-shell/src-tauri/src/: health.rs  lib.rs  main.rs  sidecars.rs
apps/voice-launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/voice-launcher/src-tauri/capabilities/: default.json
apps/voice-launcher/src-tauri/src/: lib.rs  main.rs
deploy/: README.md  admin-portal.Dockerfile  control-plane.Dockerfile  docker-compose.pilot.yml
docs/: a2a-v1-compatibility.md  a2a-v1-direct.md  admin-monitoring.md  admin-portal.md  anp-hardening.md  api-contract.md  architecture.md  backend-accuracy-audit.md  cloud-deployment-plan.md  complexity-analysis.md  control-plane-architecture.md  control-plane-persistent-postgres-auth.md  database-backup-restore.md  debug-report.md  demo-checklist.md  demo.md  desktop-shell-architecture.md  frontend-chat-architecture.md  frontend-redesign-plan.md  frontend-redesign-research.md  installer-roadmap.md  local-agent-production-boundary.md  (+18 more)
(+709 files in other folders)
