[package]
name = "oracle-amigo-desktop-shell"
version = "0.1.0"
description = "Oracle Amigo desktop shell"
edition = "2021"

[lib]
name = "oracle_amigo_desktop_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
ureq = { version = "2", default-features = false, features = ["json"] }
