[package]
name = "oracle-amigo-quick-voice"
version = "0.1.0"
description = "Oracle Amigo Quick Voice launcher"
edition = "2021"

[lib]
name = "oracle_amigo_quick_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
